--- a/EMPRESA/index.html
+++ b/EMPRESA/index.html
@@ -41,7 +41,7 @@
         <!-- Producto 1 -->
         <div class="col-md-3">
           <div class="card">
-            <img src="C:\Users\carrl\Desktop\Manteca.png" class="card-img-top" alt="Producto 1">
+            <img src="imagenes/Manteca.png" class="card-img-top" alt="Producto 1">
             <div class="card-body">
               <h5 class="card-title">Manteca</h5>
               <p class="card-text">Precio: $33.990</p>
@@ -52,7 +52,7 @@
         <!-- Producto 2 -->
         <div class="col-md-3">
           <div class="card">
-            <img src="C:\Users\carrl\Desktop\Lentejas.png" class="card-img-top" alt="Producto 2">
+            <img src="imagenes/Lentejas.png" class="card-img-top" alt="Producto 2">
             <div class="card-body">
               <h5 class="card-title">Lentejas 2</h5>
               <p class="card-text">Precio: $3.190</p>
@@ -63,7 +63,7 @@
         <!-- Producto 3 -->
         <div class="col-md-3">
           <div class="card">
-            <img src="C:\Users\carrl\Desktop\yoghurt.png" class="card-img-top" alt="Producto 3">
+            <img src="imagenes/yoghurt.png" class="card-img-top" alt="Producto 3">
             <div class="card-body">
               <h5 class="card-title">Yoghurt</h5>
               <p class="card-text">Precio: $1.650</p>
@@ -74,7 +74,7 @@
         <!-- Producto 4 -->
         <div class="col-md-3">
           <div class="card"> 
-            <img src="C:\Users\carrl\Desktop\Pan.png" class="card-img-top" alt="Producto 4">
+            <img src="imagenes/Pan.png" class="card-img-top" alt="Producto 4">
             <div class="card-body">
               <h5 class="card-title">Pan</h5>
               <p class="card-text">Precio: $1.950</p>
